; ModuleID = '/home/carl/AnghaBench/linux/drivers/clk/extr_clk-stm32f4.c_stm32f4_pll_round_rate.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/clk/extr_clk-stm32f4.c_stm32f4_pll_round_rate.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.clk_hw = type { i32 }
%struct.clk_gate = type { i32 }
%struct.stm32f4_pll = type { i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (%struct.clk_hw*, i64, i64*)* @stm32f4_pll_round_rate to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @stm32f4_pll_round_rate(%struct.clk_hw* %0, i64 %1, i64* %2) #0 {
  %4 = alloca %struct.clk_hw*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i64*, align 8
  %7 = alloca %struct.clk_gate*, align 8
  %8 = alloca %struct.stm32f4_pll*, align 8
  %9 = alloca i64, align 8
  store %struct.clk_hw* %0, %struct.clk_hw** %4, align 8
  store i64 %1, i64* %5, align 8
  store i64* %2, i64** %6, align 8
  %10 = load %struct.clk_hw*, %struct.clk_hw** %4, align 8
  %11 = call %struct.clk_gate* @to_clk_gate(%struct.clk_hw* %10)
  store %struct.clk_gate* %11, %struct.clk_gate** %7, align 8
  %12 = load %struct.clk_gate*, %struct.clk_gate** %7, align 8
  %13 = call %struct.stm32f4_pll* @to_stm32f4_pll(%struct.clk_gate* %12)
  store %struct.stm32f4_pll* %13, %struct.stm32f4_pll** %8, align 8
  %14 = load i64, i64* %5, align 8
  %15 = load i64*, i64** %6, align 8
  %16 = load i64, i64* %15, align 8
  %17 = udiv i64 %14, %16
  store i64 %17, i64* %9, align 8
  %18 = load i64, i64* %9, align 8
  %19 = load %struct.stm32f4_pll*, %struct.stm32f4_pll** %8, align 8
  %20 = getelementptr inbounds %struct.stm32f4_pll, %struct.stm32f4_pll* %19, i32 0, i32 0
  %21 = load i64, i64* %20, align 8
  %22 = icmp ult i64 %18, %21
  br i1 %22, label %23, label %27

23:                                               ; preds = %3
  %24 = load %struct.stm32f4_pll*, %struct.stm32f4_pll** %8, align 8
  %25 = getelementptr inbounds %struct.stm32f4_pll, %struct.stm32f4_pll* %24, i32 0, i32 0
  %26 = load i64, i64* %25, align 8
  store i64 %26, i64* %9, align 8
  br label %32

27:                                               ; preds = %3
  %28 = load i64, i64* %9, align 8
  %29 = icmp ugt i64 %28, 432
  br i1 %29, label %30, label %31

30:                                               ; preds = %27
  store i64 432, i64* %9, align 8
  br label %31

31:                                               ; preds = %30, %27
  br label %32

32:                                               ; preds = %31, %23
  %33 = load i64*, i64** %6, align 8
  %34 = load i64, i64* %33, align 8
  %35 = load i64, i64* %9, align 8
  %36 = mul i64 %34, %35
  ret i64 %36
}

declare dso_local %struct.clk_gate* @to_clk_gate(%struct.clk_hw*) #1

declare dso_local %struct.stm32f4_pll* @to_stm32f4_pll(%struct.clk_gate*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
